Specify Node.js and NPM versions

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.21.2"
   },
-  "engines": {
-  "node": "18.x"
+"engines": {
+  "node": "18.x",
+  "npm": "9.x"
 }
 }
