--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAOxobQEAAAAANhuzc1tEQ49rPJTI1QT0DANL%2FOo%3DijHk452oSkuJGFXOvzHzB6RULmyvsSZIOzH9mRyTj59Rdqm2Rm
+BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAABoUrQEAAAAAx1AoLTITxGkZ1VvFiE7XILa8nr0%3D3rSsdrJ6x2oNTBYv0TRFV86tHdf9jzDq1h2N0QEqDFTWrI3mly
 TWITTER_USER_ID=1849509848959897600
-TWITTER_API_KEY=gFVTW1VjmbeUheS3CQUSWvubr
-TWITTER_API_SECRET=47hVP5GwflnJjPeWmAEtcxlaEhImINKp9naiORRjXPLjPXS2zf
-TWITTER_ACCESS_TOKEN=1513242459744133120-dk3K9tomXnEDgrLta71WMRB9ihYR3p
-TWITTER_ACCESS_SECRET=0LUiJOYliVSD7H3CUnE0Vrbyx5CSKLpMt6s1eLphAnh1A
+TWITTER_API_KEY=c1z8oiAnvJxZJ8sXSPIZhkIdh9
+TWITTER_API_SECRET=0RaSiNPGSxm6Dc2l6IlbETLNKbpvDaVVuSYpOdlAkEtbilsdYq
+TWITTER_ACCESS_TOKEN=701796333443743744-7F1WFEoNJ7gGsmUjZPUht3MXNIvJKB5
+TWITTER_ACCESS_SECRET=QFImpgtPo856fMDMxTCEcjR6ABet7f1IlH3WyPMnKLIBZ
 PORT=3001
+
