--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
   "name": "dm-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Twitter DM bot using Twitter API v2",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "twitter-api-v2": "^1.20.2"
-  },
-  "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "twitter-api-v2": "^1.14.0"
   }
 }
