--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAABoUrQEAAAAAx1AoLTITxGkZ1VvFiE7XILa8nr0%3D3rSsdrJ6x2oNTBYv0TRFV86tHdf9jzDq1h2N0QEqDFTWrI3mly
-TWITTER_USER_ID=1849509848959897600
-TWITTER_API_KEY=c1z8oiAnvJxZJ8sXSPIZhkIdh9
-TWITTER_API_SECRET=0RaSiNPGSxm6Dc2l6IlbETLNKbpvDaVVuSYpOdlAkEtbilsdYq
-TWITTER_ACCESS_TOKEN=701796333443743744-7F1WFEoNJ7gGsmUjZPUht3MXNIvJKB5
-TWITTER_ACCESS_SECRET=QFImpgtPo856fMDMxTCEcjR6ABet7f1IlH3WyPMnKLIBZ
-PORT=3001
-
+TWITTER_CLIENT_ID="WnlMNm1Zclo1cDhTa3JfaWFmSnE6MTpjaQ"
+TWITTER_CLIENT_SECRET="gyPozDSQ4QOjwSkHd7pS-0aWPYcV4J6aWQdIjO5uJ627V1FGqi"
+TWITTER_API_KEY="UCR47DLMKHw93KWzEmLkcuvQC"
+TWITTER_API_SECRET="STTFECsr9YN1Iyo2yOKylpkEDiTGYjqoItWId7ATQjBggZwniC"
+BEARER_TOKEN="AAAAAAAAAAAAAAAAAAAAAN9ZwgEAAAAADHsi6Z3mTwZFb0KuGDxWfSEBDic%3DTxhkNte7bmHX958kOWFv7Zm5T3iutCDY0bBI4illeofDFDRAtk"
+TWITTER_ACCESS_TOKEN="1513242459744133120-pnimuLKPfQZ9QD5SlAaZ5h9UVxGqHS"
+TWITTER_ACCESS_SECRET="zdtcuWdpYWDdmiInmsty44wr48XXYSoqMLBonJHtbzZLL"
