--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "speed-scroll",
   "version": "1.0.0",
-  "description": "Twitter DM bot using Twitter API v2",
+  "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "dotenv": "^16.0.3",
     "twitter-api-v2": "^1.14.0"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "repository": {
     "type": "git",
